[metadata]
name = airflow-task-group-builder
version = 0.0.1
author = Jason Liu
author_email = "Jason Liu" <jasonacg@gmail.com>
description = A tool for modular Airflow task groups.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    apache-airflow>=2.1.0
include_package_data = True

[options.packages.find]
where = src

[egg_info]
egg_base = .

[coverage:run]
branch = True

[coverage:report]
show_missing = True